# EduTrackX

./: .gitignore  README.md  main.py  pyproject.toml  start.sh
attached_assets/: Pasted-Build-a-full-stack-AI-powered-student-academic-dashboard-system-called-EduTrackX-This-system-shou-1762245685191_1762245685193.txt
backend/: requirements.txt  run.py
backend/app/: __init__.py
backend/app/models/: database.py
backend/app/routes/: ai.py  assignments.py  attendance.py  auth.py  dashboard.py  export.py  study.py  subjects.py
backend/app/utils/: ai_helpers.py  ocr_helper.py  pdf_generator.py
backend/ml/: predict.py  train_model.py  training_data.csv
docs/: DEMO_SCRIPT.md  DEPLOYMENT.md  GITHUB_SETUP.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AIAssistant.jsx  Assignments.jsx  Attendance.jsx  Dashboard.jsx  Login.jsx  Profile.jsx  StudyPlanner.jsx  Subjects.jsx
frontend/src/utils/: api.js
