[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "gunicorn>=23.0.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pymongo>=4.15.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
